--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=0">
@@ -9,160 +10,222 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- CSS -->
 </head>
+
 <body>
-    
-<header>
-    <div class="container">
-        <div class="logo">
-            <a href=""><img src="assets/images/logo.png" alt=""></a>
-        </div>
-        <div class="menu">
-            <nav>
-                <ul>
-                    <li><a href="#home" class="active">HOME</a></li>
-                    <li><a href="#home">HOME</a></li>
-                    <li><a href="#home">HOME</a></li>
-                    <li><a href="#home">HOME</a></li>
-                    <li><a href="#home">HOME</a></li>
-                </ul>
-            </nav>
-        </div>
-    </div>
-</header>
 
-<section id="banner">
-    <div class="container column">
-        <div class="banner-headline">
-            <h1>Top notch experience</h1>
-            <h2>Medicenter is a responsive template perfect for all screen sizes</h2>
-        </div>
-        <div class="banner-options">
-            <div class="banner1">
-                <div class="banner-title">Emegency Case</div>
-                <div class="banner-content">Algum texto qualquer !</div>
-                <div class="banner-action"><a href="#">Read more</a></div>
+    <header>
+        <div class="container">
+            <div class="logo">
+                <a href=""><img src="assets/images/logo.png" alt=""></a>
             </div>
-            <div class="banner2">
-                <div class="banner-title">Doctors Timetable</div>
-                <div class="banner-content">Algum texto qualquer !</div>
-                <div class="banner-action"><a href="#">Read more</a></div>
-            </div>
-            <div class="banner3">
-                <div class="banner-title">Opening Hours</div>
-                <div class="banner-content">
+            <div class="menu">
+                <nav>
                     <ul>
-                        <li><span>Monday - Friday</span><span>08:00 - 17:00</span></li>
-                        <li><span>Saturday</span><span>09:30 - 17:30</span></li>
-                        <li><span>Sunday</span><span>09:30 - 15:00</span></li>
+                        <li><a href="#home" class="active">HOME</a></li>
+                        <li><a href="#home">HOME</a></li>
+                        <li><a href="#home">HOME</a></li>
+                        <li><a href="#home">HOME</a></li>
+                        <li><a href="#home">HOME</a></li>
                     </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+
+    <section id="banner">
+        <div class="container column">
+            <div class="banner-headline">
+                <h1>Top notch experience</h1>
+                <h2>Medicenter is a responsive template perfect for all screen sizes</h2>
+            </div>
+            <div class="banner-options">
+                <div class="banner1">
+                    <div class="banner-title">Emegency Case</div>
+                    <div class="banner-content">Algum texto qualquer !</div>
+                    <div class="banner-action"><a href="#">Read more</a></div>
+                </div>
+                <div class="banner2">
+                    <div class="banner-title">Doctors Timetable</div>
+                    <div class="banner-content">Algum texto qualquer !</div>
+                    <div class="banner-action"><a href="#">Read more</a></div>
+                </div>
+                <div class="banner3">
+                    <div class="banner-title">Opening Hours</div>
+                    <div class="banner-content">
+                        <ul>
+                            <li><span>Monday - Friday</span><span>08:00 - 17:00</span></li>
+                            <li><span>Saturday</span><span>09:30 - 17:30</span></li>
+                            <li><span>Sunday</span><span>09:30 - 15:00</span></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
-<section id="content">
-    <div class="container">
-        <section>
-            <div class="widget">
-                <div class="widget-title">
-                    <h2>Latest News</h2>
-                    <div class="border-title"></div>
+    <section id="content">
+        <div class="container">
+            <section>
+                <div class="widget">
+                    <div class="widget-title">
+                        <h2>Latest News</h2>
+                        <div class="border-title"></div>
+                    </div>
+                    <div class="widget-content flex">
+                        <article>
+                            <a href="">
+                                <div class="news-data">
+                                    <div class="news-posted-at">12 DEC 12</div>
+                                    <div class="news-comments">2</div>
+                                </div>
+                                <div class="news-thumbnail">
+                                    <img src="assets/images/dr.jpg" alt="Doctor" />
+                                </div>
+                                <h2 class="news-title">
+                                    Lorem ipsum dolor sit amat velum
+                                </h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ratione, incidunt provident mollitia fuga recusandae eius
+                                    voluptatum! Facere reiciendis porro, nemo ipsum, officiis iste repellendus sit, quasi
+                                    temporibus corporis ipsam.
+                                </p>
+                            </a>
+                        </article>
+                        <article>
+                            <a href="">
+                                <div class="news-data">
+                                    <div class="news-posted-at">12 DEC 12</div>
+                                    <div class="news-comments">2</div>
+                                </div>
+                                <div class="news-thumbnail">
+                                    <img src="assets/images/dr.jpg" alt="Doctor" />
+                                </div>
+                                <h2 class="news-title">
+                                    Lorem ipsum dolor sit amat velum
+                                </h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ratione, incidunt provident mollitia fuga recusandae eius
+                                    voluptatum! Facere reiciendis porro, nemo ipsum, officiis iste repellendus sit, quasi
+                                    temporibus corporis ipsam.
+                                </p>
+                            </a>
+                        </article>
+                        <article>
+                            <a href="">
+                                <div class="news-data">
+                                    <div class="news-posted-at">12 DEC 12</div>
+                                    <div class="news-comments">2</div>
+                                </div>
+                                <div class="news-thumbnail">
+                                    <img src="assets/images/dr.jpg" alt="Doctor" />
+                                </div>
+                                <h2 class="news-title">
+                                    Lorem ipsum dolor sit amat velum
+                                </h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ratione, incidunt provident mollitia fuga recusandae eius
+                                    voluptatum! Facere reiciendis porro, nemo ipsum, officiis iste repellendus sit, quasi
+                                    temporibus corporis ipsam.
+                                </p>
+                            </a>
+                        </article>
+                        <article>
+                            <a href="">
+                                <div class="news-data">
+                                    <div class="news-posted-at">12 DEC 12</div>
+                                    <div class="news-comments">2</div>
+                                </div>
+                                <div class="news-thumbnail">
+                                    <img src="assets/images/dr.jpg" alt="Doctor" />
+                                </div>
+                                <h2 class="news-title">
+                                    Lorem ipsum dolor sit amat velum
+                                </h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ratione, incidunt provident mollitia fuga recusandae eius
+                                    voluptatum! Facere reiciendis porro, nemo ipsum, officiis iste repellendus sit, quasi
+                                    temporibus corporis ipsam.
+                                </p>
+                            </a>
+                        </article>
+                    </div>
                 </div>
-                <div class="widget-content flex">
-                    <article>
-                        <a href="">
-                            <div class="news-data">
-                                <div class="news-posted-at">12 DEC 12</div>
-                                <div class="news-comments">2</div>
-                            </div>
-                            <div class="news-thumbnail">
-                                <img src="assets/images/dr.jpg" alt="Doctor" />
-                            </div>
-                            <h2 class="news-title">
-                                Lorem ipsum dolor sit amat velum
-                            </h2>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ratione, incidunt provident mollitia fuga recusandae eius voluptatum! Facere reiciendis porro, nemo ipsum, officiis iste repellendus sit, quasi temporibus corporis ipsam.
-                            </p>
-                        </a>
-                    </article>
-                    <article>
-                        <a href="">
-                            <div class="news-data">
-                                <div class="news-posted-at">12 DEC 12</div>
-                                <div class="news-comments">2</div>
-                            </div>
-                            <div class="news-thumbnail">
-                                <img src="assets/images/dr.jpg" alt="Doctor" />
-                            </div>
-                            <h2 class="news-title">
-                                Lorem ipsum dolor sit amat velum
-                            </h2>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ratione, incidunt provident mollitia fuga recusandae eius voluptatum! Facere reiciendis porro, nemo ipsum, officiis iste repellendus sit, quasi temporibus corporis ipsam.
-                            </p>
-                        </a>
-                    </article>
-                    <article>
-                        <a href="">
-                            <div class="news-data">
-                                <div class="news-posted-at">12 DEC 12</div>
-                                <div class="news-comments">2</div>
-                            </div>
-                            <div class="news-thumbnail">
-                                <img src="assets/images/dr.jpg" alt="Doctor" />
-                            </div>
-                            <h2 class="news-title">
-                                Lorem ipsum dolor sit amat velum
-                            </h2>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ratione, incidunt provident mollitia fuga recusandae eius voluptatum! Facere reiciendis porro, nemo ipsum, officiis iste repellendus sit, quasi temporibus corporis ipsam.
-                            </p>
-                        </a>
-                    </article>
-                    <article>
-                        <a href="">
-                            <div class="news-data">
-                                <div class="news-posted-at">12 DEC 12</div>
-                                <div class="news-comments">2</div>
-                            </div>
-                            <div class="news-thumbnail">
-                                <img src="assets/images/dr.jpg" alt="Doctor" />
-                            </div>
-                            <h2 class="news-title">
-                                Lorem ipsum dolor sit amat velum
-                            </h2>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ratione, incidunt provident mollitia fuga recusandae eius voluptatum! Facere reiciendis porro, nemo ipsum, officiis iste repellendus sit, quasi temporibus corporis ipsam.
-                            </p>
-                        </a>
-                    </article>
+            </section>
+            <aside>
+                <div class="widget">
+                    <div class="widget-title">
+                        <h2>Departments</h2>
+                        <div class="border-title"></div>
+                    </div>
+                    <div class="widget-content widget-container-departments">
+                        <a href="#" class="departments1"></a>
+                        <a href="#" class="departments2"></a>
+                        <a href="#" class="departments3"></a>
+                        <a href="#" class="departments4"></a>
+                        <a href="#" class="departments5"></a>
+                        <a href="#" class="departments6"></a>
+                    </div>
                 </div>
-            </div>
-        </section>
-        <aside>
-            <div class="widget">
-                <div class="widget-title">
-                    <h2>Departments</h2>
-                    <div class="border-title"></div>
+                <div class="widget">
+                    <div class="widget-title">
+                        <h2>Make An Appointment</h2>
+                        <div class="border-title"></div>
+                    </div>
+                    <div class="widget-content widget-container-appointment">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam voluptate harum praesentium beatae id. Exercitationem ducimus
+                            ad ut eius laborum! Quos exercitationem qui fugiat, quisquam fuga maxime illo iure eos!
+                        </p>
+                        <ul>
+                            <li><a href="#">by phone: 12123456789</a></li>
+                            <li><a href="#">by e-mail: contato@suporte.com.br</a></li>
+                            <li><a href="#">by app MedicApp</a></li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="widget-content">
+            </aside>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container column">
+            <div class="footer-menu">
+                <div class="fm-1">
+                    ...
+                </div>
+                <div class="fm-2">
+                    ...
+                </div>
+                <div class="fm-3">
                     ...
                 </div>
             </div>
-            <div class="widget">
-                <div class="widget-title">
-                    <h2>Make An Appointment</h2>
+            <div class="footer-content">
+                <div class="footer-item">
+                    <div class="widget-title">
+                        <h2>Medicenter Clinic</h2>
+                        <div class="border-title"></div>
+                    </div>
+                    <div class="widget-content">
+                        Mauris adipisicing mauris fringlla turpis interdum sed pulvinar niai maleasuada individual.
+                    </div>
+                </div>
+                <div class="footer-item">
+                    <h2>Latest Posts</h2>
                     <div class="border-title"></div>
                 </div>
-                <div class="widget-content">
-                    ...
+                <div class="footer-item">
+                    <h2>Latest Tweets</h2>
+                    <div class="border-title"></div>
                 </div>
             </div>
-        </aside>
-    </div>
-</section>
+
+            <div class="footer-copy">
+                Copyright - Todos os direitos reservados
+            </div>
+        </div>
+    </footer>
 
 </body>
+
 </html>
